<resources>
    <string name="app_name">psicopedagogiaAndroid</string>
    <string name="agregar_paciente">Agregar Paciente</string>
    <string name="ingrese_el_nombre">Ingrese el nombre</string>
    <string name="ingrese_el_apellido">Ingrese el apellido</string>
    <string name="ingrese_el_dni">Ingrese el DNI</string>
    <string name="ingrese_el_tel_fono">Ingrese el teléfono</string>
    <string name="ingrese_el_motivo_de_consulta">Ingrese el motivo de consulta</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="nivel_educativo">Nivel educativo</string>
    <string name="ingrese_el_curso_o_grado">Ingrese el curso o grado</string>
    <string name="agregar">Agregar</string>
    <string name="campo_para_seleccionar_el_nivel_educativo_del_paciente">Campo para seleccionar el nivel educativo del paciente</string>
    <string name="agregar_paciente1">Agregar Paciente</string>
    <string name="logo_tipo_del_proyecto">logo tipo Del Proyecto</string>
    <string name="historial_psicopedag_gico">Historial Psicopedagógico</string>
    <string name="eliminar">Eliminar</string>
    <string name="pacienteHint">Paciente</string>
    <string name="tipoRegistroHint">Tipo de registro</string>
    <string name="fechaHint">Fecha</string>
    <string name="descripcionHint">Descripción</string>
    <string name="guardarBtnText">Guardar</string>
    <string name="editarDescripcion">Editar</string>
    <string name="eliminarDescripcion">Eliminar</string>
    <string name="volverDescripcion">Volver</string>
    <string name="detallePacienteText">Detalle del Paciente</string>
    <string name="nombreText">Nombre</string>
    <string name="apellidoText">Apellido</string>
    <string name="o_completa_mail_contrasenia">o completá mail y contraseña</string>
    <string name="dniText">DNI</string>
    <string name="telefonoText">Teléfono</string>
    <string name="nivelEducativoText">Nivel educativo</string>
    <string name="cursoGradoText">Curso/Grado</string>
    <string name="fechaNacimientoText">Fecha de nacimiento</string>
    <string name="motivoConsulta">Motivo de consulta</string>
    <string name="atrasBtnText">Atrás</string>
    <string name="verHistorialBtnText">Ver historial</string>
    <string name="agregarHistorialDescripcion">Agregar historial</string>
    <string name="listadoPacientesText">Listado de Pacientes</string>
    <string name="agregarPacienteDescripcion">Agregar paciente</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="email">Email</string>
    <string name="contrasenia">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="pregunta_cerrar_sesion">¿Deseás cerrar sesión?</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="sin_sesion">Sin sesión</string>
    <string name="icono_pacientes">Icono pacientes</string>
</resources>
