<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundGeneral"
    tools:context=".MainActivity">

    <include
        android:id="@+id/includeHeaderUsuario"
        layout="@layout/view_header_usuario"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/logo_size"
        android:layout_height="@dimen/logo_size"
        android:contentDescription="@string/logo_tipo_del_proyecto"
        app:srcCompat="@drawable/logo"
        app:layout_constraintTop_toBottomOf="@id/includeHeaderUsuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_xxxl" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/historial_psicopedag_gico"
        android:textSize="@dimen/text_title"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:paddingHorizontal="@dimen/margin_xl"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_m" />

    <Button
        android:id="@+id/btnPacientes"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:text="@string/pacienteHint"
        android:textAllCaps="false"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/colorAccent"
        android:onClick="btnPacientes"
        app:rippleColor="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_l" />

</androidx.constraintlayout.widget.ConstraintLayout>
