<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        tools:context=".cargarPacienteActivity">

        <!-- HEADER (muestra el email con tvUsuarioEmail) -->
        <include
            android:id="@+id/includeHeaderUsuario"
            layout="@layout/view_header_usuario"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Back dentro del header -->
        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="@dimen/icon_l"
            android:layout_height="@dimen/icon_l"
            android:layout_marginStart="@dimen/margin_l"
            android:background="@android:color/transparent"
            android:contentDescription="@string/atrasBtnText"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/includeHeaderUsuario"
            app:layout_constraintBottom_toBottomOf="@id/includeHeaderUsuario"
            app:tint="@color/white"
            app:srcCompat="@drawable/atras" />

        <LinearLayout
            android:id="@+id/formContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/section_spacing"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/includeHeaderUsuario"
            app:layout_constraintWidth_max="600dp">

            <LinearLayout
                android:id="@+id/headerContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_xl"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/padding_l">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_m"
                    android:text="@string/agregar_paciente"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="@dimen/title_text"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="@dimen/icon_width"
                    android:layout_height="@dimen/icon_height"
                    app:srcCompat="@drawable/icono"
                    app:tint="@color/white" />
            </LinearLayout>

            <!-- (todo lo demás queda igual) -->

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_m"
                android:textColorHint="@color/colorPrimaryLight"
                app:boxStrokeColor="@color/colorPrimaryLight"
                app:hintTextColor="@color/colorPrimaryLight">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nombre"
                    style="@style/EditTextCursorColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ingrese_el_nombre"
                    android:textColor="@color/colorPrimaryLight"
                    android:textColorHint="@color/colorPrimaryLight" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_m"
                android:textColorHint="@color/colorPrimaryLight"
                app:boxStrokeColor="@color/colorPrimaryLight"
                app:hintTextColor="@color/colorPrimaryLight">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/apellido"
                    style="@style/EditTextCursorColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ingrese_el_apellido"
                    android:textColor="@color/colorPrimaryLight"
                    android:textColorHint="@color/colorPrimaryLight" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_m"
                android:textColorHint="@color/colorPrimaryLight"
                app:boxStrokeColor="@color/colorPrimaryLight"
                app:hintTextColor="@color/colorPrimaryLight">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dni"
                    style="@style/EditTextCursorColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ingrese_el_dni"
                    android:textColor="@color/colorPrimaryLight"
                    android:textColorHint="@color/colorPrimaryLight" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_m"
                android:textColorHint="@color/colorPrimaryLight"
                app:boxStrokeColor="@color/colorPrimaryLight"
                app:hintTextColor="@color/colorPrimaryLight">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/telefono"
                    style="@style/EditTextCursorColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ingrese_el_tel_fono"
                    android:textColor="@color/colorPrimaryLight"
                    android:textColorHint="@color/colorPrimaryLight" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_m"
                android:hint="@string/fecha_de_nacimiento"
                android:textColorHint="@color/colorPrimaryLight"
                app:boxStrokeColor="@color/colorPrimaryLight"
                app:hintTextColor="@color/colorPrimaryLight">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fechaNac"
                    style="@style/EditTextCursorColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"
                    android:inputType="none"
                    android:padding="@dimen/padding_m"
                    android:textColor="@color/colorPrimaryLight"
                    android:textColorHint="@color/colorPrimaryLight" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nivelEduLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_m"
                android:hint="@string/nivel_educativo"
                android:textColorHint="@color/colorPrimaryLight"
                app:boxStrokeColor="@color/colorPrimaryLight"
                app:endIconTint="@color/colorPrimaryLight"
                app:hintTextColor="@color/colorPrimaryLight">

                <AutoCompleteTextView
                    android:id="@+id/nivelEdu"
                    style="@style/EditTextCursorColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:inputType="none"
                    android:minHeight="@dimen/input_height"
                    android:padding="@dimen/padding_m"
                    android:popupBackground="@color/colorPrimary"
                    android:textColor="@color/colorPrimaryLight"
                    android:textColorHint="@color/colorPrimaryLight" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cursoLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_l"
                android:hint="@string/ingrese_el_curso_o_grado"
                android:textColorHint="@color/colorPrimaryLight"
                app:boxStrokeColor="@color/colorPrimaryLight"
                app:endIconTint="@color/colorPrimaryLight"
                app:hintTextColor="@color/colorPrimaryLight">

                <AutoCompleteTextView
                    android:id="@+id/curso"
                    style="@style/EditTextCursorColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:inputType="none"
                    android:minHeight="@dimen/input_height"
                    android:padding="@dimen/padding_m"
                    android:popupBackground="@color/colorPrimary"
                    android:textColor="@color/colorPrimaryLight"
                    android:textColorHint="@color/colorPrimaryLight" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_l"
                android:textColorHint="@color/colorPrimaryLight"
                app:boxStrokeColor="@color/colorPrimaryLight"
                app:hintTextColor="@color/colorPrimaryLight">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/motivoconsulta"
                    style="@style/EditTextCursorColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ingrese_el_motivo_de_consulta"
                    android:textColor="@color/colorPrimaryLight"
                    android:textColorHint="@color/colorPrimaryLight" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnAgregar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xl"
                android:backgroundTint="@color/colorPrimary"
                android:minHeight="@dimen/button_height"
                android:text="@string/agregar"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
